fix: remove negative margin-top from admin header
The margin-top: -10px was causing layout issues. The .wrap margin
should be handled separately via the margin-top: 0 rule on .wrap.

--- a/src/admin/_common.scss
+++ b/src/admin/_common.scss
@@ -25,7 +25,6 @@
 	.wrap > & {
 		margin-left: -20px;
 		margin-right: -20px;
-		margin-top: -10px; // Offset the .wrap default top margin
 
 		@media screen and (max-width: 782px) {
 			margin-left: -10px;
